overlays/nginx_canary/canary_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - image: docker.io/argoproj/rollouts-demo:green
        imagePullPolicy: IfNotPresent
        name: canary
        ports:
        - containerPort: 8000
