overlays/nginx_canary/canary_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: canary
  name: canary
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8080
  selector:
    app: canary
  type: ClusterIP
