overlays/nginx_canary/stable_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns-prod
  name: prod-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: REDACTED
    http:
      paths:
      - backend:
          service:
            name: prod
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - REDACTED
    secretName: prod-ingress-tls
